--- a/AHC_MLK/AHC_MLK/Web.config
+++ b/AHC_MLK/AHC_MLK/Web.config
@@ -5,6 +5,9 @@
   -->
 <configuration>
   <appSettings>
+	<add key="Constr" value="Data Source=client1\MSSQL2019;Initial Catalog=DB_SIT;Persist Security Info=True;User ID=sa;Password=" />
+	<add key="DBPASS" value="cQRY2SNMcNeVx3UVSajqjQ==" />
+	  
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
