--- a/AHC_MLK/AHCBL/AHCBL.csproj
+++ b/AHC_MLK/AHCBL/AHCBL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Dao\Admin\MemberListDao.cs" />
     <Compile Include="Dao\Admin\SendEmailDao.cs" />
     <Compile Include="Dao\BaseDao.cs" />
+    <Compile Include="Dto\Admin\FAQDto.cs" />
     <Compile Include="Dto\Admin\MemberListDto.cs" />
     <Compile Include="Dto\Admin\SendEmailDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
